se actualizó el archivo openapi.yaml
